--- a/index-viewer.html
+++ b/index-viewer.html
@@ -67,13 +67,17 @@
 	<div class="reveal">
 		<div class="slides">
 			<section data-auto-animate data-background-color="#255359">
+				<h2>Viewer</h2>
+			</section>
+			<!-- 
+			<section data-auto-animate data-background-color="#255359">
 				<h1>Comment allez-vous?</h1>
 			</section>
 			<section data-auto-animate data-background-color="#255359">
 				<h1>Comment allez-vous?</h1>
 				<h1>張: Très bien, et toi?</h1>
 			</section>
-			<!-- <section data-auto-animate>
+			<section data-auto-animate>
 				<h1>C'est</h1>
 			</section>
 			<section data-auto-animate>
@@ -200,6 +204,25 @@
 			sx = snap.val();
 			Reveal.slide(sx.h, sx.v, sx.f)
 		})
+	}else{
+		console.log('public channel');
+		//snapshot來監聽mx資料
+		onValue(ref(db, 'mx'), (snap)=>{
+			mx = snap.val();
+			window.updateMouseData()
+		})
+		onValue(ref(db, 'my'), (snap)=>{
+			my = snap.val();
+			window.updateMouseData()
+		})
+		onValue(ref(db, 'mouth'), (snap)=>{
+			mouth = snap.val();
+			audioElem.innerHTML = mouth;
+		})
+		onValue(ref(db, 'sx'), (snap)=>{
+			sx = snap.val();
+			Reveal.slide(sx.h, sx.v, sx.f)
+		})
 	}
 
 
@@ -250,13 +273,42 @@
 	}, 10);
 	
 </script>
+<script src="utils.js"></script>
 <script type="text/babel">
 	const {useState, useEffect} = React;
 	const {createRoot} = ReactDOM;
 
 	const App = () =>{
 		let urlParams = new URLSearchParams(window.location.search);
-		return urlParams.has("userId") ? <h1>客戶端userId: {urlParams.get("userId")}</h1> : '沒有userId';
+		
+		const [userId, setUserId] = useState('');
+
+		const onChangeUserId = event => {
+			setUserId(event.target.value);
+		}
+
+		const onKeyupUserId = event => {
+			if (event.key === 'Enter' || event.keyCode === 13) {
+				setUserId(event.target.value);
+				location.href=`index-viewer.html?userId=${event.target.value}`;
+       		}
+		}
+
+		const onClickPublicChannel = () =>{
+			setUserId('');
+			location.href=`index-viewer.html`;
+		}
+		
+		return <>
+			<IfComponent statement={urlParams.has("userId")}>
+				<h1>控制端userId: {urlParams.get("userId")}</h1>
+				<button onClick={onClickPublicChannel}>回到公有頻道</button>
+			</IfComponent>
+			<ElseComponent statement={urlParams.has("userId")}>
+				<h1>沒有userId: 公用頻道</h1>
+				UserId: <input type="text" value={userId} onChange={onChangeUserId} onKeyUp={onKeyupUserId}/>
+			</ElseComponent>
+		</>;
 	};
 
 	const root = createRoot(document.querySelector("#app"));
