--- a/index-viewer.html
+++ b/index-viewer.html
@@ -162,7 +162,7 @@
         /* border: 1px solid #fff; */
         position: absolute;
         top: 10%;
-        left: 10px;
+        right: 10px;
         z-index: 10000000;
       }
 
@@ -304,15 +304,15 @@
   </body>
   <script
     crossorigin
-    src="https://unpkg.com/react@18/umd/react.development.js"
+    src="react.development.js"
   ></script>
   <script
     crossorigin
-    src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"
+    src="react-dom.development.js"
   ></script>
   <script
     crossorigin
-    src="https://unpkg.com/@babel/standalone/babel.min.js"
+    src="babel.min.js"
   ></script>
   <script>
     window.addEventListener('load', function () {
