--- a/index-viewer.html
+++ b/index-viewer.html
@@ -33,6 +33,7 @@
       rel="stylesheet"
     />
     <style>
+      /* cubism人物 */
       canvas#live2D {
         transition-property: opacity;
         transition-duration: 0.3s;
@@ -40,7 +41,7 @@
         position: fixed !important;
         bottom: 0;
         right: -20px;
-        z-index: 999999;
+        z-index: 9999999;
         opacity: 1;
         height: 100%;
       }
@@ -55,6 +56,8 @@
         transition-duration: 0.3s;
         opacity: 0;
       }
+
+      /* react.js => 換台ui */
       #app {
         font-size: 22px;
         position: fixed;
@@ -66,19 +69,21 @@
         z-index: 9999999;
       }
 
-      .reveal .slides {
+      /* reveal.js */
+      .reveal {
+        width: 150px;
+        height: 300px;
         position: absolute;
-        z-index: 9999999;
-        top: 35% !important;
-        left: 30% !important;
-        /* writing-mode: vertical-lr; */
+        z-index: 10000000;
+        bottom: 5% !important;
+        right: 25% !important;
       }
-    </style>
-    <style>
+
+      /* 彈幕 */
       #bullets {
         position: absolute;
         width: 100vw;
-        height: 100vh;
+        height: 20vh;
         z-index: 9999999;
       }
 
@@ -155,6 +160,7 @@
         margin-left: -14px;
       }
 
+      /* 動作列表 */
       #motions {
         /* align-self: center; */
         padding: 5px;
@@ -164,6 +170,7 @@
         top: 10%;
         right: 10px;
         z-index: 10000000;
+        display: none;
       }
 
       #motions li {
@@ -177,13 +184,18 @@
         background: #f00;
       }
 
-      #pageIndex {
+      /* google簡報 */
+      #slideBackground {
+        height: 100vh;
+        width: 100vw;
+        z-index: 9999999;
         position: absolute;
-        right: 10%;
-        bottom: 10%;
-        background: #000;
-        color: #fff;
-        font-size: 18px;
+      }
+
+      /* google drive picker */
+      .picker.picker-dialog {
+        position: absolute;
+        z-index: 9999999;
       }
     </style>
 
@@ -200,6 +212,7 @@
     onkeydown="toggleAvatar(event)"
     style="background-color: rgb(36, 147, 110)"
   >
+    <iframe src="default-iframe.html" id="slideBackground"></iframe>
     <div class="bubble hidden" id="bubble">
       <span> asdfadsad dawd awd wa dwad awd awdwadadwad </span>
     </div>
@@ -207,35 +220,22 @@
 
     <div class="reveal">
       <div class="slides">
-        <!-- 
-			<section data-auto-animate data-background-color="#255359">
-				<h2>Viewer</h2>
-			</section>
-			<section data-auto-animate data-background-color="#255359">
-				<h1>Comment allez-vous?</h1>
-			</section>
-			<section data-auto-animate data-background-color="#255359">
-				<h1>Comment allez-vous?</h1>
-				<h1>張: Très bien, et toi?</h1>
-			</section>
-			<section data-auto-animate>
-				<h1>C'est</h1>
-			</section>
-			<section data-auto-animate>
-				<h1>C'est</h1>
-				<h1>la</h1>
-			</section>
-			<section data-auto-animate>
-				<h1>C'est</h1>
-				<h1>la</h1>
-				<h1>vie</h1>
-			</section> -->
         <section>
-          <h1>有<br />聽<br />懂</h1>
+          <section>
+            <h1>有<br />聽<br />懂</h1>
+          </section>
+
+          <section>
+            <h1>下<br />課<br />中</h1>
+          </section>
         </section>
+
         <section>
-          <h1 id="editable"></h1>
+          <section>
+            <h1 id="editable"></h1>
+          </section>
         </section>
+
         <section>
           <h1>聽<br />不<br />懂</h1>
         </section>
@@ -302,27 +302,14 @@
     <div id="app"></div>
     <div id="motions"></div>
   </body>
-  <script
-    crossorigin
-    src="react.development.js"
-  ></script>
-  <script
-    crossorigin
-    src="react-dom.development.js"
-  ></script>
-  <script
-    crossorigin
-    src="babel.min.js"
-  ></script>
+  <script crossorigin src="react.development.js"></script>
+  <script crossorigin src="react-dom.development.js"></script>
+  <script crossorigin src="babel.min.js"></script>
   <script>
     window.addEventListener('load', function () {
       changeScene(6);
-      runModel(-0, -1.2, 1.2);
+      runModel(-0, -1.2, 0.6);
     });
-    // setTimeout(() => {
-    //   changeScene(0);
-    //   runModel(0, 0, 2);
-    // }, 2000);
   </script>
   <script type="module">
     // Import the functions you need from the SDKs you need
@@ -474,6 +461,95 @@
     // })
   </script>
   <script>
+    let tokenClient;
+    let accessToken = null;
+    let pickerInited = false;
+    let gisInited = false;
+
+    // Use the API Loader script to load google.picker
+    function onApiLoad() {
+      gapi.load('picker', onPickerApiLoad);
+    }
+
+    function onPickerApiLoad() {
+      pickerInited = true;
+    }
+
+    function gisLoaded() {
+      // TODO(developer): Replace with your client ID and required scopes
+      tokenClient = google.accounts.oauth2.initTokenClient({
+        client_id:
+          '1031126226169-3k8b7dbbcfv75ud9vu40eu7o9opcd716.apps.googleusercontent.com',
+        scope: 'https://www.googleapis.com/auth/drive.readonly',
+        callback: '', // defined later
+      });
+      gisInited = true;
+    }
+
+    // Create and render a Picker object for selecting from Google Drive
+    function createPicker() {
+      const showPicker = () => {
+        // TODO(developer): Replace with your API key
+        const picker = new google.picker.PickerBuilder()
+          .addViewGroup(
+            new google.picker.ViewGroup(google.picker.ViewId.PRESENTATIONS)
+          )
+          .setLocale('zh')
+          .enableFeature(google.picker.Feature.NAV_HIDDEN)
+          .setOAuthToken(accessToken)
+          .setDeveloperKey('AIzaSyDW0JMqBcf8p2PaW-fMH7yLTGT7-5A5cvk')
+          .setCallback(pickerCallback)
+          .build();
+        picker.setVisible(true);
+      };
+
+      // Use Google Identity Services to request an access token
+      tokenClient.callback = async response => {
+        if (response.error !== undefined) {
+          throw response;
+        }
+        accessToken = response.access_token;
+        showPicker();
+      };
+
+      if (accessToken === null) {
+        // Prompt the user to select a Google Account and ask for consent to share their data
+        // when establishing a new session.
+        tokenClient.requestAccessToken({ prompt: 'consent' });
+      } else {
+        // Skip display of account chooser and consent dialog for an existing session.
+        tokenClient.requestAccessToken({ prompt: '' });
+      }
+    }
+
+    // A simple callback implementation.
+    function pickerCallback(data) {
+      let url = 'nothing';
+      if (data[google.picker.Response.ACTION] == google.picker.Action.PICKED) {
+        let doc = data[google.picker.Response.DOCUMENTS][0];
+        url = doc[google.picker.Document.EMBEDDABLE_URL];
+        document.querySelector('#slideBackground').src = url;
+      }
+      //let message = `You picked: ${url}`;
+      //console.log(message);
+      //document.getElementById('result').innerText = message;
+    }
+  </script>
+  <!-- Load the Google API Loader script. -->
+  <script
+    async
+    defer
+    src="https://apis.google.com/js/api.js"
+    onload="onApiLoad()"
+  ></script>
+  <script
+    async
+    defer
+    src="https://accounts.google.com/gsi/client"
+    onload="gisLoaded()"
+  ></script>
+
+  <script>
     // LIPSYNC
     var audioElem = document.getElementById('audio');
     var modifier = 150;
@@ -568,6 +644,9 @@
               onKeyUp={onKeyupUserId}
             />
           </ElseComponent>
+          <div>
+            <button onClick={e => createPicker()}>google picker</button>
+          </div>
         </>
       );
     };
